# foundational-python-course

./: Readme.md
final_project/: main.py
section_10/: 01-abstraction.py  02-encapsulation.py  03-inheritance.py  04-polymorphism.py  06-super.py  07-multiple_inheritance.py  08-composition.py  09-abstract_class.py  10-interfaces.py  11-dunder_methods.py
section_11/: 02-try_except.py  04-custom_errors.py
section_12/: 01-modules.py  02-packages.py  03-__name__.py  04-alias_and_imports.py  05-pip.py  my_module.py
section_13/poetry/: beauty.py  pyproject.toml
section_2/: 02-Comentarios.py  03-variables.py  04-data_types.py  05-strings.py  06-string_indexes.py  07-immutable.py  08-conversions.py  09-math_operations.py  10-incorporated_functions.py  11-input.py  12-mini_project.py
section_3/: 01-condicional_if.py  02-condiconal_elif.py  03-ternary_operator.py  04-truthy_falsey.py  05-logical_operator.py  06-comparation_operator.py  07-membership_operators.py  08-is_equal.py  09-short_circuiting.py  10-flow_control.py  11-mini_project.py  11-mini_proyect.py
section_4/: 01-lists.py  02-lists_slicing.py  03-lists_methods_adding.py  04-lists_methods_remove.py  05-lists_methods_search.py  06-lists_methods_sort.py  07-lists_others.py  08-lists_matrix.py  09-list_unpacking.py  10-list_exercise.py
section_5/: 01-dictionaries.py  02-keys.py  03-dictionaries_methods_search.py  04-dictionaries_methods_add_remove.py  05-dictionary_exercise.py
section_6/: 01-tuple.py  02-sets.py  03-sets_methods_part1.py  04-sets_methods_part2.py  05-sets_methods_part3.py  06-sets_exercise.py
(+35 files in other folders)
